# cohan_planner_multi

./: .gitignore  .gitmodules  .setup.bash.swp  README.md  ros1_ros2_communication.md  setup_and_build.sh
.github/workflows/: cmake.yml
agent_path_prediction/: CMakeLists.txt  README.md  package.xml
agent_path_prediction/cfg/: AgentPathPrediction.cfg
agent_path_prediction/include/agent_path_prediction/: agent_path_prediction.h
agent_path_prediction/msg/: AgentPose.msg
agent_path_prediction/scripts/: predict_goal.py
agent_path_prediction/src/: agent_path_prediction.cpp
agent_path_prediction/srv/: AgentGoal.srv  AgentPosePredict.srv
cohan_layers/: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
cohan_layers/cfg/: AgentLayer.cfg  AgentVLayer.cfg
cohan_layers/include/cohan_layers/: agent_layer.h  agent_visibility_layer.h  static_agent_layer.h
cohan_layers/launch/: agent_filter.launch
cohan_layers/scripts/: agent_filter.py  laser_contour.py  locate_invisible_humans.py  utils.py
cohan_layers/src/: agent_layer.cpp  agent_visibility_layer.cpp  static_agent_layer.cpp
cohan_msgs/: CMakeLists.txt  package.xml
cohan_msgs/msg/: AgentMarkerStamped.msg  AgentPathArray.msg  AgentState.msg  AgentTimeToGoal.msg  AgentTimeToGoalArray.msg  AgentTrajectory.msg  AgentTrajectoryArray.msg  AgentType.msg  CrossingInfo.msg  PointArray.msg  StateArray.msg  TrackedAgent.msg  TrackedAgents.msg  Trajectory.msg  TrajectoryArray.msg  TrajectoryMsg.msg
hateb_local_planner/: CMakeLists.txt  README.md  package.xml
hateb_local_planner/cfg/: HATebLocalPlannerReconfigure.cfg
hateb_local_planner/include/hateb_local_planner/: backoff.h  hateb_config.h  hateb_local_planner_ros.h  homotopy_class_planner.h  obstacles.h  optimal_planner.h  optimized_vel.h  planner_interface.h  static_plan_visualizer.h  visualization.h
hateb_local_planner/launch/: gp.launch  gp_only.launch
hateb_local_planner/msg/: OptimizationCost.msg
hateb_local_planner/src/: backoff.cpp  hateb_config.cpp  hateb_local_planner_ros.cpp  homotopy_class_planner.cpp  local_planner_node.cpp  optimal_planner.cpp  optimized_vel.cpp  static_plan_visualizer.cpp  visualization.cpp
hateb_local_planner/srv/: Approach.srv  Optimize.srv  getOptimVel.srv  getPlanning.srv  setPlanning.srv
invisible_humans_detection/: CMakeLists.txt  package.xml
invisible_humans_detection/include/invisible_humans_detection/: map_scanner.h
invisible_humans_detection/launch/: test.launch
invisible_humans_detection/maps/: adream_RDC_complet.pgm  adream_RDC_complet_inv.pgm  bremen_kitchen.pgm  bremen_kitchen.yaml  bremen_kitchen_inv.pgm  laas_adream.pgm  laas_adream.yaml  laas_adream_inv.pgm  laas_adream_inv.yaml  laas_adream_inv_circles.pgm  maze.pgm  maze.yaml  maze_new.yaml
invisible_humans_detection/maps/areas/: bremen_kitchen.yaml  bremen_kitchen_inv_circles.pgm  data_gui.py  laas_adream.yaml  maze.yaml  maze_circles.pgm  passages.yaml  (+1 more)
invisible_humans_detection/scripts/: docking.py  generate_map.py  locate_invisible_humans.py  locate_invisible_humans_new.py  measure_surprise.py  utils.py
invisible_humans_detection/src/: invisible_humans_detection_node.cpp  map_scanner.cpp
invisible_humans_detection/tests/: accuracy.py  data.yaml  data_gui.py  lass_passage_data.yaml  maze.plt  pubslish_fake_robot.py
map_server/: CMakeLists.txt  package.xml
rviz_path_array/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_path_array/src/: patharray_display.cpp  patharray_display.h
(+21 files in other folders)
